remove ugel images

--- a/src/style/UI/pages/home/sections/opinionsUsers/_opinionsUsers.scss
+++ b/src/style/UI/pages/home/sections/opinionsUsers/_opinionsUsers.scss
@@ -51,6 +51,7 @@ section.opinions-users {
         margin-top: 27px;
         padding-bottom: 50px;
         span {
+          cursor: pointer;
           display: block;
           width: 12px;
           height: 12px;
