--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 
+ *   All rights reserved.
+ */
 // use common
 @use "./common/normalize";
 @use "./common/globalRules";
