--- a/src/style/common/_tmPreload.scss
+++ b/src/style/common/_tmPreload.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 
+ *   All rights reserved.
+ */
 .tm-preloader {
   position: fixed;
   left: 0;
@@ -12,7 +16,7 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
+ -webkit-box-align: center; 
   -ms-flex-align: center;
   align-items: center;
   z-index: 1000;
